--- a/app/views/home/_food_categories.html.haml
+++ b/app/views/home/_food_categories.html.haml
@@ -1,85 +1,120 @@
 .each_food_category
-	= link_to '/show_category_locations/bagels', remote: true do
-		.category_details
-			%span.category_text Bagels
-			= image_tag 'bagel.svg', height: "90px"
+  = link_to '#' do
+    .category_details#bagels
+      %span.category_text Bagels
+      = image_tag 'bagel.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/burgers', remote: true do
-		.category_details
-			%span.category_text Burgers
-			= image_tag 'burger.svg', height: "90px"
+  = link_to '#' do
+    .category_details#burgers
+      %span.category_text Burgers
+      = image_tag 'burger.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/burritos', remote: true do
-		.category_details
-			%span.category_text Burritos
-			= image_tag 'burrito.svg', height: "90px"
+  = link_to '#' do
+    .category_details#burritos
+      %span.category_text Burritos
+      = image_tag 'burrito.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/candy', remote: true do
-		.category_details
-			%span.category_text Candy
-			= image_tag 'candy.svg', height: "90px"
+  = link_to '#' do
+    .category_details#candy
+      %span.category_text Candy
+      = image_tag 'candy.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/coffee', remote: true do
-		.category_details
-			%span.category_text Coffee
-			= image_tag 'coffee.svg', height: "90px"
+  = link_to '#' do
+    .category_details#coffee
+      %span.category_text Coffee
+      = image_tag 'coffee.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/croissants', remote: true do
-		.category_details
-			%span.category_text Croissants
-			= image_tag 'croissant.svg', height: "90px"
+  = link_to '#' do
+    .category_details#croissants
+      %span.category_text Croissants
+      = image_tag 'croissant.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/donuts', remote: true do
-		.category_details
-			%span.category_text Donuts
-			= image_tag 'donut.svg', height: "90px"
+  = link_to '#' do
+    .category_details#donuts
+      %span.category_text Donuts
+      = image_tag 'donut.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/hotdogs', remote: true do
-		.category_details
-			%span.category_text Hotdogs
-			= image_tag 'hotdog.svg', height: "90px"
+  = link_to '#' do
+    .category_details#hotdogs
+      %span.category_text Hotdogs
+      = image_tag 'hotdog.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/ice+cream', remote: true do
-		.category_details
-			%span.category_text Ice Cream
-			= image_tag 'icecream.svg', height: "90px"
+  = link_to '#' do
+    .category_details#icecream
+      %span.category_text Ice Cream
+      = image_tag 'icecream.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/indian', remote: true do
-		.category_details
-			%span.category_text Indian Food
-			= image_tag 'indian.svg', height: "90px"
+  = link_to '#' do
+    .category_details#indian
+      %span.category_text Indian Food
+      = image_tag 'indian.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/juice', remote: true do
-		.category_details
-			%span.category_text Juice
-			= image_tag 'juice.svg', height: "90px"
+  = link_to '#' do
+    .category_details#juice
+      %span.category_text Juice
+      = image_tag 'juice.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/noodles', remote: true do
-		.category_details
-			%span.category_text Noodles
-			= image_tag 'noodles.svg', height: "90px"
+  = link_to '#' do
+    .category_details#noodles
+      %span.category_text Noodles
+      = image_tag 'noodles.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/pasta', remote: true do
-		.category_details
-			%span.category_text Pasta
-			= image_tag 'pasta.svg', height: "90px"
+  = link_to '#' do
+    .category_details#pasta
+      %span.category_text Pasta
+      = image_tag 'pasta.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/sandwiches', remote: true do
-		.category_details
-			%span.category_text Sandwiches
-			= image_tag 'sandwich.svg', height: "90px"
+  = link_to '#' do
+    .category_details#sandwiches
+      %span.category_text Sandwiches
+      = image_tag 'sandwich.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/seafood', remote: true do
-		.category_details
-			%span.category_text Seafood
-			= image_tag 'seafood.svg', height: "90px"
+  = link_to '#' do
+    .category_details#seafood
+      %span.category_text Seafood
+      = image_tag 'seafood.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/soup', remote: true do
-		.category_details
-			%span.category_text Soup
-			= image_tag 'soup.svg', height: "90px"
+  = link_to '#' do
+    .category_details#soup
+      %span.category_text Soup
+      = image_tag 'soup.svg', height: "90px"
 .each_food_category
-	= link_to '/show_category_locations/tacos', remote: true do
-		.category_details
-			%span.category_text Tacos
-			= image_tag 'taco.svg', height: "90px"
+  = link_to '#' do
+    .category_details#tacos
+      %span.category_text Tacos
+      = image_tag 'taco.svg', height: "90px"
+
+
+:javascript 
+  var category_results = [];
+
+  $('.each_food_category').on('click', function() {
+    var category = $(this).find('.category_details').attr('id');
+    $.ajax({
+      type: "GET",
+      url: "/show_category_locations/" + category,
+      dataType: "json",
+      success: function(data){
+        console.log(data);
+        category_results = data;
+      }        
+    });
+    
+    var map_options = {
+      center: { lat: 37.789164, lng: -122.402979 },
+      zoom: 12
+    };
+
+    var map = new google.maps.Map(document.getElementById("map"), map_options);
+
+    $.each(category_results, function() {
+      var lat_lng = new google.maps.LatLng(this.lat, this.lng);
+      var marker = new google.maps.Marker({
+        position: lat_lng,
+        map: map,
+        title: this.lat
+      });
+
+    });
+
+  });
