--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -6,7 +6,9 @@ $light_blue: #e1eef6
 body 
 	background-color: $dark_blue
 	margin: 0
-
+#header_container
+	width: 100%
+	height: 100px
 
 #header_text
 	font-family: 'Pacifico', cursive
@@ -15,7 +17,18 @@ body
 	padding: 10px 20px
 	color: $yellow
 	margin-bottom: 10px
-	width: 100%
+
+#locate_me
+	float: right
+	display: inline-block
+	font-size: 20px
+	color: $yellow
+	margin-top: 25px
+	margin-right: 40px
+	transition: all 0.25s ease-in-out
+	&:hover
+		color: #D2A02E
+		cursor: pointer
 
 
 #food_options
@@ -54,14 +67,22 @@ body
 			margin-right: 20px
 		.category_details
 			margin: 0 auto
-			width: 77%
+			width: 72%
 		a 
 			text-decoration: none
 		a:visited, a:active, a:link
 			color: #333
+	@media (max-width: 768px)
+		width: 100%
 
 #map 
 	margin: 0px auto
 	width: 70%
 	height: 520px
 	float: right
+	@media (max-width: 768px)
+		width: 100%
+
+
+.info_window_title
+	font-size: 21px
