--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,6 @@
     %link{:href => "https://fonts.googleapis.com/css?family=Pacifico", :rel => "stylesheet", :type => "text/css"}
     %link{:href => "https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300", :rel => "stylesheet", :type => "text/css"}
     = csrf_meta_tags
+    = stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
   %body
     = yield
